src/style.css
/* @import url('https://fonts.googleapis.com/css2?family=Matemasie&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap'); */
@import url('https://fonts.googleapis.com/css2?family=Jersey+10&family=Matemasie&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');



* {
  font-family: "Jersey 10", sans-serif;
  font-style: normal;
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  letter-spacing: 4px;
}

html,
body {
  height: 100%;
  width: 100%;
  color: white;
}

header,
footer {
  position: relative;
  z-index: 5;
  height: 100vh;
  width: 100%;
  background-color: #000;
  display: flex;
  gap: 20px;
  flex-direction: column;
  justify-content: center;
  align-items: center;

  h1 {
    color: whitesmoke;
    text-align: center;
    line-height: 1;
    font-weight: 600;
    font-size: 3rem;
    text-transform: uppercase;
  }
}

header h1 {
  color: whitesmoke;
  text-align: center;
  line-height: 1;
  font-weight: 600;
  font-size: 3rem;
  text-transform: uppercase;

}


#image-GLSL-scroller-container {
  position: relative;
  width: 100%;
}

#images-GLSL-tracks {
  width: 100%;
  height: 100vh;
  overflow: hidden;
  position: fixed;
  inset: 0;
  background: #000;
  z-index: 1;


}


.gl {
  position: absolute;
  inset: 0;
  width: 100%;
  z-index: 999;
}

.gl-inner {
  height: 100vh;
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  mix-blend-mode: difference;

  p {
    font-size: 5rem;
    color: whitesmoke;
  }
}

